welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Msg="R") {droite();avance();}
               ^BDRBuggle:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Msg="L") {gauche();avance();}
               ^BDRBuggle:6: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Msg="I") {droite();droite();avance();}
               ^BDRBuggle:7: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Msg="A") avance();
               ^BDRBuggle:8: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Msg="B") avance(2);
               ^BDRBuggle:9: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Msg="C") avance(3);
               ^BDRBuggle:10: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Msg="Z") recule();
               ^BDRBuggle:11: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Msg="Y") recule(2);
               ^BDRBuggle:12: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Msg="X") recule(3);	
               ^